avoid printing useless logs on console when power management is working

BUG: 421660